added data, added map code to script

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Labs 4 & 5: Interactive Data Visualization with D3.js</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Insert Title Here</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container"> <!-- Centers content and sets max width -->
-        <h1>Labs 4 & 5: Interactive Data Visualization with D3.js</h1>
+        <h1>Insert Title Here</h1>
 
         <div class="controls">
             <label>Year: </label><p id="value"></p>
@@ -32,9 +32,7 @@
     <!-- Load D3.js -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
-    <script>
-        
-    </script>
-    <script src="js/script.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
