added an element for the d3 slider

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>Insert Title Here</h1>
 
         <div class="controls">
-            <label>Year: </label><p id="value"></p>
+            <label>Minimum Number of Observations (We recommend a minimum of at least 10): </label><br/>
+            <p id="value"></p>
             <div id="slider"></div>
 
 
