Modified html again for slider, added zoom effects when clicking on station coordinates

--- a/index.html
+++ b/index.html
@@ -11,18 +11,13 @@
         <h1>Insert Title Here</h1>
 
         <div class="controls">
-            <label>Minimum Number of Observations (We recommend a minimum of at least 10): </label><br/>
-            <p id="value"></p>
+            <label>Minimum Number of Observations (We recommend a minimum of 25): </label>
+            <label id="value"></label>
             <div id="slider"></div>
 
 
-            <label>X: </label><select id="xVariable" class="variable">
-            </select><br>
-            <label>Y: </label><select id="yVariable" class="variable">
-            </select><br>
-            <label>Size</label><select id="sizeVariable" class="variable">
-            </select>
-
+            <label>What would you like to look at?</label><select id="colorVar" class="variable"></select>
+            
 
         </div>
         
