Clicking points shows chart

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         
         <div id="vis"></div> <!--  Will hold our visualization (SVG) -->
         <div id="tooltip" styles="display:none"></div>
+        <div id="line-chart"></div>
     </div>
     
     <!-- Load D3.js -->
