re-added zoom features and began selector feature

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="slider"></div>
 
 
-            <label>What would you like to look at?</label><select id="colorVar" class="variable"></select>
+            <label>What would you like to look at?</label><select id="dataVar" class="variable"></select>
             
 
         </div>
