--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         
         <div id="vis"></div> <!--  Will hold our visualization (SVG) -->
-        <div id="tooltip" styles="display:none"></div>
+        <div id="tooltip" style="display:none"></div>
         <div id="line-chart"></div>
     </div>
     
