changed some css stuff to in line

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +9,13 @@
 <body>
     <div class="container"> <!-- Centers content and sets max width -->
         <h1>Daily Weather Data in the United States (2017)</h1>
-        <i><h4> A data visualization developed by Ashwin Sawant, Daniel Fesenko, and Serena Choy</h4></i>
+        <i><h4 style="color: crimson;"> A data visualization developed by Ashwin Sawant, Daniel Fesenko, and Serena Choy</h4></i>
 
         <br>
 
         <p>&emsp;&emsp;This data visualization represents 2017 daily weather data in the US sourced from the NOAA Daily Global Historical Climatology Network. The type of weather data collected includes precipitation, temperature, and wind data, at various locations across the US. The map features the different weather stations across the US with data. Start exploring by using the slider to filter stations with a minimum number of observations and the drop down to select which variable of data you’d like to see. Zoom and pan on the map, then click on any point on the map to see its associated plot. Click off of the point to zoom back out. 
             For more about the visualization see
-            <a href="#writeup">below</a>.
+            <a href="#writeup" style="color: crimson;">below</a>.
         </p>
         
         <br><hr><br>
