added tooltip for plot, visual changes to script and html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <b><label id="value"></label></b>
             <div id="slider"></div>
 
-            <label>What would you like to look at?</label><select id="dataVar" class="variable"></select>
+            <label>What would you like to look at? </label><select id="dataVar" class="variable"></select>
 
         </div>
         
@@ -35,7 +35,7 @@
 
         <br>
         <hr><article id="writeup"> <br>
-        
+        <h4 style="color:crimson;">About the visualization</h4>
         <p> &emsp;&emsp;The goal of the visualization is to present trends in the weather data through making it more easily navigated and 
             filtered. Specifically, we noticed that the dataset includes multiple weather data from the same weather station on different 
             days, but varying stations tended to have more data points than others. We wanted to provide a way for users to filter out 
